--- a/index.html
+++ b/index.html
@@ -18,168 +18,192 @@
   </head>
   <body>
     <header>
-      <!-- navigation -->
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul>
-          <li><a class="navigation" href="./index.html">Studio</a></li>
-          <li><a class="navigation" href="">Portfolio</a></li>
-          <li><a class="navigation" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <!-- contacts -->
-      <address class="contacts">
-        <ul>
-          <li>
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <!-- navigation -->
+        <nav class="nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li><a class="navigation" href="./index.html">Studio</a></li>
+            <li><a class="navigation" href="">Portfolio</a></li>
+            <li><a class="navigation" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <!-- contacts -->
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li>
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- title -->
-      <section class="title">
-        <h1 class="title-main">Effective Solutions for Your Business</h1>
-        <button class="title-button" type="button">Order Service</button>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-container">
+            <h1 class="title-main">Effective Solutions for Your Business</h1>
+            <button class="title-button" type="button">Order Service</button>
+          </div>
+        </div>
       </section>
       <!-- About -->
       <section class="about">
-        <h2>About</h2>
-        <ul>
-          <li>
-            <h3 class="about-title">Strategy</h3>
-            <p class="about-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Punctuality</h3>
-            <p class="about-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Diligence</h3>
-            <p class="about-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Technologies</h3>
-            <p class="about-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">About</h2>
+          <ul class="about-flex">
+            <li class="about-item">
+              <h3 class="about-title">Strategy</h3>
+              <p class="about-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Punctuality</h3>
+              <p class="about-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Diligence</h3>
+              <p class="about-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Technologies</h3>
+              <p class="about-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- our teem -->
       <section class="teem">
-        <h2 class="teem-title">Our Team</h2>
-        <ul>
-          <li class="teem-list">
-            <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="list-title">Mark Guerrero</h3>
-            <p class="list-text">Product Designer</p>
-          </li>
-          <li class="teem-list">
-            <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3 class="list-title">Tom Ford</h3>
-            <p class="list-text">Frontend Developer</p>
-          </li>
-          <li class="teem-list">
-            <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="list-title">Camila Garcia</h3>
-            <p class="list-text">Marketing</p>
-          </li>
-          <li class="teem-list">
-            <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="list-title">Daniel Wilson</h3>
-            <p class="list-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="teem-title">Our Team</h2>
+          <ul class="teem-flex">
+            <li class="teem-list">
+              <div class="teem-border">
+                <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
+                <h3 class="list-title">Mark Guerrero</h3>
+                <p class="list-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="teem-list">
+              <div class="teem-border">
+                <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
+                <h3 class="list-title">Tom Ford</h3>
+                <p class="list-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="teem-list">
+              <div class="teem-border">
+                <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
+                <h3 class="list-title">Camila Garcia</h3>
+                <p class="list-text">Marketing</p>
+              </div>
+            </li>
+            <li class="teem-list">
+              <div class="teem-border">
+                <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
+                <h3 class="list-title">Daniel Wilson</h3>
+                <p class="list-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Portfolio-->
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img-portfolio-1.jpg"
-              alt="Mobile interface screens of a purple-themed banking application"
-              width="360"
-            />
-            <h3 class="portfolio-list-title">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-2.jpg"
-              alt="Hand holding a smartphone scanning a QR code for a contactless payment"
-              width="360"
-            />
-            <h3 class="portfolio-list-title">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-3.jpg"
-              alt="Laptop and smartphone displaying a meditation app with the title 'Return to Normalcy"
-              width="360"
-            />
-            <h3 class="portfolio-list-title">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-4.jpg"
-              alt="Driver’s view of a car interior with a phone showing a taxi navigation app"
-              width="360"
-            />
-            <h3 class="portfolio-list-title">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-5.jpg"
-              alt="Smartphone and illustrations showing a futuristic moon landscape at different times"
-              width="360"
-            />
-            <h3 class="portfolio-list-title">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio-6.jpg"
-              alt="Smiling woman with glasses and headphones looking at her phone outside"
-              width="360"
-            />
-            <h3 class="portfolio-list-title">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-flex">
+            <li class="portfolio-container">
+              <img
+                src="./images/img-portfolio-1.jpg"
+                alt="Mobile interface screens of a purple-themed banking application"
+                width="360"
+              />
+              <h3 class="portfolio-list-title">Banking App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-container">
+              <img
+                src="./images/img-portfolio-2.jpg"
+                alt="Hand holding a smartphone scanning a QR code for a contactless payment"
+                width="360"
+              />
+              <h3 class="portfolio-list-title">Cashless Payment</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-container">
+              <img
+                src="./images/img-portfolio-3.jpg"
+                alt="Laptop and smartphone displaying a meditation app with the title 'Return to Normalcy"
+                width="360"
+              />
+              <h3 class="portfolio-list-title">Meditation App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-container">
+              <img
+                src="./images/img-portfolio-4.jpg"
+                alt="Driver’s view of a car interior with a phone showing a taxi navigation app"
+                width="360"
+              />
+              <h3 class="portfolio-list-title">Taxi Service</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-container">
+              <img
+                src="./images/img-portfolio-5.jpg"
+                alt="Smartphone and illustrations showing a futuristic moon landscape at different times"
+                width="360"
+              />
+              <h3 class="portfolio-list-title">Screen Illustrations</h3>
+              <p class="portfolio-list-text">Design</p>
+            </li>
+            <li class="portfolio-container">
+              <img
+                src="./images/img-portfolio-6.jpg"
+                alt="Smiling woman with glasses and headphones looking at her phone outside"
+                width="360"
+              />
+              <h3 class="portfolio-list-title">Online Courses</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-container">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
