--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
-    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header-border">
       <div class="container header-container">
         <!-- navigation -->
         <nav class="nav">
@@ -51,10 +52,8 @@
       <!-- title -->
       <section class="hero">
         <div class="container">
-          <div class="hero-container">
-            <h1 class="title-main">Effective Solutions for Your Business</h1>
-            <button class="title-button" type="button">Order Service</button>
-          </div>
+          <h1 class="title-main">Effective Solutions for Your Business</h1>
+          <button class="title-button" type="button">Order Service</button>
         </div>
       </section>
       <!-- About -->
@@ -99,29 +98,29 @@
           <h2 class="teem-title">Our Team</h2>
           <ul class="teem-flex">
             <li class="teem-list">
-              <div class="teem-border">
-                <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
+              <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
+              <div class="teem-item">
                 <h3 class="list-title">Mark Guerrero</h3>
                 <p class="list-text">Product Designer</p>
               </div>
             </li>
             <li class="teem-list">
-              <div class="teem-border">
-                <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
+              <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
+              <div class="teem-item">
                 <h3 class="list-title">Tom Ford</h3>
                 <p class="list-text">Frontend Developer</p>
               </div>
             </li>
             <li class="teem-list">
-              <div class="teem-border">
-                <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
+              <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
+              <div class="teem-item">
                 <h3 class="list-title">Camila Garcia</h3>
                 <p class="list-text">Marketing</p>
               </div>
             </li>
             <li class="teem-list">
-              <div class="teem-border">
-                <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
+              <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
+              <div class="teem-item">
                 <h3 class="list-title">Daniel Wilson</h3>
                 <p class="list-text">UI Designer</p>
               </div>
@@ -134,59 +133,71 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-flex">
-            <li class="portfolio-container">
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-1.jpg"
                 alt="Mobile interface screens of a purple-themed banking application"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="portfolio-border">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
-            <li class="portfolio-container">
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-2.jpg"
                 alt="Hand holding a smartphone scanning a QR code for a contactless payment"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-border">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
-            <li class="portfolio-container">
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-3.jpg"
                 alt="Laptop and smartphone displaying a meditation app with the title 'Return to Normalcy"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="portfolio-border">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
-            <li class="portfolio-container">
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-4.jpg"
                 alt="Driver’s view of a car interior with a phone showing a taxi navigation app"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-border">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
-            <li class="portfolio-container">
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-5.jpg"
                 alt="Smartphone and illustrations showing a futuristic moon landscape at different times"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
+              <div class="portfolio-border">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
-            <li class="portfolio-container">
+            <li class="portfolio-item">
               <img
                 src="./images/img-portfolio-6.jpg"
                 alt="Smiling woman with glasses and headphones looking at her phone outside"
                 width="360"
               />
-              <h3 class="portfolio-list-title">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-border">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -194,15 +205,13 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <a class="logo" href="./index.html"
-            >Web<span class="logo-footer">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a class="logo-2" href="./index.html"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
