--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-2" href="./index.html"
+        <a class="logo-two" href="./index.html"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-text">
