--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- About -->
       <section class="about">
         <div class="container">
-          <h2 class="hidden">About</h2>
+          <h2 class="visually-hidden">About</h2>
           <ul class="about-flex">
             <li class="about-item">
               <h3 class="about-title">Strategy</h3>
